example2/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloexpress
spec:
  type: ClusterIP
  selector:
    app: helloexpress
  ports:
    - name: http
      port: 80
      targetPort: 3000 # => Deployment containerPort
