example2/Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-express
  annotations:
    kubernets.io/ingress.class: "nginx"
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /
        backend:
          serviceName: helloexpress
          servicePort: 3000
      - path: /users
        backend:
          serviceName: helloexpress
          servicePort: 3000
